completed the project. Squashed bugs

--- a/Evaluation/JS_Debouncing_Book_Movie/styles/movies.css
+++ b/Evaluation/JS_Debouncing_Book_Movie/styles/movies.css
@@ -12,6 +12,8 @@ nav{
 
 }
 #movies{
+    margin-top: 25px;
     display: grid;
     grid-template-columns: repeat(4,1fr);
+    gap:10px
 }
